update readme to reflect project details and prework

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "template",
+  "name": "currency-exchanger",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=development",
